--- a/html/graduation.html
+++ b/html/graduation.html
@@ -10,9 +10,155 @@
     <meta content="black" name="apple-mobile-web-app-status-bar-style">
     <meta content="telephone=no" name="format-detection">
     <link rel="shortcut icon" type="image/ico" href="favicon.ico"/>
-    <link rel="stylesheet" href="../css/common.css">
-
+    <script src="../js/libs/flexible.js"></script>
+    <link rel="stylesheet" href="../css/main.css">
 </head>
 <body>
+  <div class="wrapper">
+    <div class="banner-container">
+      <img class="banner" src="../imgs/banner.png" alt="" />
+    </div>
+    <div class="once-container">
+      <img class="once" src="../imgs/once.png" alt="" />
+    </div>
+    <div class="thousand-container">
+      <div class="thousand">
+        <p class="addresing">
+          亲爱的，你知道吗：
+        </p>
+        <p class="thousand-pitch">
+          进入社会前的最后一次实习<br />
+          是你的第一次工作经验<br />
+          对以后职业走向有重大意义~
+        </p>
+        <p class="thousand-pitch">
+          选择一个好的实习单位<br />
+          将对未来产生深远影响<br />
+          那么，你有好的打算了吗？
+        </p>
+        <p class="title-break">
+          让你有更多、更好的职位选择<br />
+          你可以了解到名企的管理和培训方式<br />
+          学习到大量实用工作技能<br />
+          让你成为同级生中的佼佼者。
+        </p>
+        <p class="thousand-pitch">
+          来给你的简历写上完美的第一笔<br />
+          报名参与淘力千人实习计划吧！
+        </p>
+      </div>
+    </div>
+    <div class="media-container">
+      <div class="media">
+        <p class="client-say">
+          美的是一家领先的消费家电及暖通空调系统全球性
+          企业，提供多元化的产品种类，包括空调、冰
+          箱、洗衣机、厨房家电、及各类小型家电。美的
+          坚守 “为客户创造价值”的原则，致力创造美好
+          生活。美的专注于持续的技术革新，以提升产品
+          及服务质量，令生活更舒适、更美好。
+        </p>
+      </div>
+    </div>
+    <div class="galanz-container">
+      <div class="galanz">
+        <p class="galanz-say">
+          格兰仕集团是一家世界级综合性白色家电品牌企业，是中国家电业具有强大影响力的龙头企业之一。格兰仕与中国改革开放同龄，在发展理念上始终坚持实干创新，专注实体经济，聚焦家电制造。围绕着“百年企业 世界品牌”的发展愿景，创业37年来，格兰仕立足广东，面向全国，走向全球，从轻纺领军企业，到微波炉世界领先，再到综合性、领先性白色家电集团，一直是中国制造在国际市场上的一张名片。
+        </p>
+      </div>
+    </div>
+    <div class="hisense-container">
+      <div class="hisense">
+        <p class="hisense-say">
+          海信科龙电器股份有限公司是中国最大的白电产品制造企业之一，创立于1984年，总部位于中国广东顺德，主要生产冰箱、空调、冷柜和洗衣机等系列产品。1996年和1999年，公司股票分别在香港和深圳两地发行上市。
+        </p>
+      </div>
+    </div>
+    <div id="form-anchor" class="grab-container">
+      <img class="grab-opp" src="../imgs/grab_opp.png" alt="" />
+    </div>
+    <div class="form-container">
+      <form class="apply-form">
+        <div class="form-cell">
+          <label for="name"><img src="../imgs/icon_business_man.png" alt="" /></label>
+          <input type="text" name="name" placeholder="姓名">
+        </div>
+        <div class="form-cell">
+          <label for="tel"><img src="../imgs/icon_mobile.png" alt="" /></label>
+          <input type="text" name="tel" placeholder="电话">
+        </div>
+        <div class="form-cell">
+          <label for="university"><img src="../imgs/icon_school.png" alt="" /></label>
+          <input type="text" name="university" placeholder="所在学校">
+        </div>
+        <div class="form-cell">
+          <label for="grad-date"><img src="../imgs/icon_graduation.png" alt="" /></label>
+          <input type="text" name="grad-date" placeholder="毕业时间">
+        </div>
+        <div class="form-cell">
+          <label for="ideal-city"><img src="../imgs/icon_world.png" alt="" /></label>
+          <input type="text" name="ideal-city" placeholder="理想工作城市">
+        </div>
+        <div class="form-cell-multi">
+          <div class="title-row">
+            <img src="../imgs/icon_experience.png" alt="" />
+            <p>
+              过往工作/实习经历<span class="tips">(如没有可填无)</span>
+            </p>
+          </div>
+          <textarea name="experience" rows="8" cols="40"></textarea>
+        </div>
+        <div class="form-cell">
+          <label for="trial-date"><img src="../imgs/icon_clock.png" alt="" /></label>
+          <input type="text" name="trial-date" placeholder="希望开始实习时间">
+        </div>
+        <div class="form-cell">
+          <label for="expected-salary"><img src="../imgs/icon_salary.png" alt="" /></label>
+          <input type="text" name="expected-salary" placeholder="期望薪资">
+        </div>
+        <div class="form-cell-apply-option">
+          <div class="bg-title">
+            选报志愿
+          </div>
+          <img class="icon-edit" src="../imgs/icon_edit.png" alt="" />
+        </div>
+        <div class="form-cell">
+          <label for="first-option" class="apply-options">1</label>
+          <input type="text" name="first-option" placeholder="第一志愿">
+        </div>
+        <div class="form-cell">
+          <label for="second-option" class="apply-options">2</label>
+          <input type="text" name="second-option" placeholder="第二志愿">
+        </div>
+        <div class="form-cell-apply-option last-option">
+          <div class="bg-title-dispatch">
+            是否服从分配
+          </div>
+          <div class="dispatch-check-container">
+            <div class="yes-container on-select">
+              是
+            </div>
+            <div class="no-container">
+              否
+            </div>
+          </div>
+        </div>
+        <div class="button-container">
+          <button class="J_submit" type="button" name="button">提交</button>
+        </div>
+      </form>
+    </div>
+    <div class="statement-container">
+      <div class="statement-title">
+        活动声明
+      </div>
+      <div class="statement-content">
+        1.本活动不收取用户任何费用；<br />
+        2.用户资料将交给实习企业，请如实填写，如有信息不实而触犯任何法律责任的，本公司一概不负任何责任；<br />
+        3.淘力拥有本次活动最终解释权。
+      </div>
+    </div>
+    <a href="#form-anchor" class="call-to-action"></a>
+  </div>
 </body>
 </html>
