--- a/html/graduation.html
+++ b/html/graduation.html
@@ -159,6 +159,33 @@
       </div>
     </div>
     <a href="#form-anchor" class="call-to-action"></a>
+    <div class="mask">
+
+    </div>
+    <div class="popup">
+      <div class="popup-title">
+        报名成功！
+      </div>
+      <p class="tips-share">
+        你可以分享给有需要的人噢！
+      </p>
+      <div class="share-btn-row">
+        <button class="J_share-btn" type="button" name="button">分享</button>
+      </div>
+      <div class="wechat-row">
+        <img class="wechat-code" src="../imgs/tounick_barcode.png" alt="" />
+        <div class="share-cloud">
+          <p class="follow-text">
+            <strong>关注淘力微信</strong>
+            第一时间接收到<br />
+            最新的实习信息
+          </p>
+        </div>
+      </div>
+      <div class="share-arrow">
+
+      </div>
+    </div>
   </div>
 </body>
 </html>
