optimise date formate

--- a/html/graduation.html
+++ b/html/graduation.html
@@ -281,7 +281,7 @@
   </div> <!--end of wrapper-->
 
   <script>
-    var backEndUrl = 'https://st-portfolio-on.herokuapp.com/message';
+    var backEndUrl = 'https://st-portfolio-on.herokuapp.com/mesge';
   </script>
 
   <script src="../json/cityData.json"></script>
