--- a/html/grad.html
+++ b/html/grad.html
@@ -21,7 +21,7 @@
       <div class="once-container"><img class="once" src="../imgs/once.png" alt=""></div>
       <div class="thousand-container">
         <div class="thousand">
-          <p class="addresing">亲爱的，你知道吗：</p>
+          <p class="addresing">亲爱的，你知道吗:</p>
           <p class="thousand-pitch">进入社会前的最后一次实习<br>是你的第一次工作经验<br>对以后职业走向有重大意义~</p>
           <p class="thousand-pitch">选择一个好的实习单位<br>将对未来产生深远影响<br>那么，你有好的打算了吗？</p>
           <p class="title-break">让你有更多、更好的职位选择<br>你可以了解到名企的管理和培训方式<br>学习到大量实用工作技能<br>让你成为同级生中的佼佼者。</p>
@@ -191,7 +191,7 @@
     <script>
       // 表单接口地址由后端输出
       var backEndUrl = "https://st-portfolio-on.herokuapp.com/message";
-      
+
     </script>
     <script src="../json/cityData.json"></script>
     <script src="../js/libs/zepto/zepto.min.js"></script>
