user experience optimization, default current month, default city is canton

--- a/html/grad.html
+++ b/html/grad.html
@@ -191,12 +191,14 @@
     <script>
       // 表单接口地址由后端输出
       var backEndUrl = "https://st-portfolio-on.herokuapp.com/message";
-
+      
     </script>
     <script src="../json/cityData.json"></script>
     <script src="../js/libs/zepto/zepto.min.js"></script>
     <script src="../js/libs/toast/toast.js"></script>
     <script src="../js/libs/anima-scroller/scroller.js"></script>
+    <script src="../js/read.js"></script>
+    <script src="../js/tounick_scroll.js"></script>
     <script src="../js/graduation.js"></script>
   </body>
 </html>
