--- a/html/grad.html
+++ b/html/grad.html
@@ -193,6 +193,7 @@
       var backEndUrl = "https://st-portfolio-on.herokuapp.com/message";
       
     </script>
+    <script src="../js/common.js"></script>
     <script src="../json/cityData.json"></script>
     <script src="../js/libs/zepto/zepto.min.js"></script>
     <script src="../js/libs/toast/toast.js"></script>
